Bug 139580 - Writer crash when saving certain documents as .docx or .doc
Summary: Writer crash when saving certain documents as .docx or .doc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.4.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.5 target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-13 10:08 UTC by eugene
Modified: 2021-01-14 09:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["sw::util::GetPoolItems(SfxItemSet const &,std::map<unsigned short,SfxPoolItem const *,sw::util::ItemSort,std::allocator<std::pair<unsigned short const ,SfxPoolItem const *> > > &,bool)"]


Attachments
Document, which shows the issue (131.22 KB, application/vnd.oasis.opendocument.text)
2021-01-13 10:09 UTC, eugene
Details

Note You need to log in before you can comment on or make changes to this bug.
Description eugene 2021-01-13 10:08:27 UTC
Description:
LibreOffice Writer crash when saving certain documents as .docx or .doc
Attached test document which show the issue.

Steps to Reproduce:
1. Open attached test document
2. Save it as Word document (.docx or .doc)


Actual Results:
LibreOffice will say it's crashed due to error and ask for document recovery

Expected Results:
Document saved in requested format


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested on versions 6.4.6.2 (Ubuntu 20.04), 7.0.4 (Ubuntu ppa), 7.0.4.2 (Debian 11) - issue always reproducible.
Comment 1 eugene 2021-01-13 10:09:28 UTC
Created attachment 168846 [details]
Document, which shows the issue
Comment 3 Commit Notification 2021-01-13 20:20:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/36038264400f591a529a18f0b742410e53db73d3

tdf#139580: combine these identical blocks together into a function

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-01-14 07:38:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/327cd7c9616339a42d477a68392012292556c2d6

tdf#139580: sw_ooxmlexport16: Add unittest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2021-01-14 07:57:09 UTC
Issue verified in

Version: 7.0.5.0.0+
Build ID: 36038264400f591a529a18f0b742410e53db73d3
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!