tdf#139580: combine these identical blocks together into a function

Change-Id: I783c7f649d0624de9fb46c2b8379fc47ec311f63
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/103917
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109226